--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
+    compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
 }
