--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "ninhn.app.girlxinh"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     compile 'com.facebook.android:facebook-android-sdk:4.11.0'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
+    compile 'me.grantland:autofittextview:0.2.1'
 }
