--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.11.0'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'me.grantland:autofittextview:0.2.1'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 
     compile 'com.onesignal:OneSignal:2.+@aar'
     compile 'com.google.android.gms:play-services-gcm:+'
