--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".view.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,13 +38,9 @@
             android:authorities="com.facebook.app.FacebookContentProvider1131735883527080"
             android:exported="true" />
 
-        <activity
-            android:name=".view.CommentActivity"
-            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".view.CommentActivity"></activity>
 
-        <receiver
-            android:name=".receiver.NetworkChangeReceiver"
-            android:theme="@style/AppTheme">
+        <receiver android:name=".receiver.NetworkChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
