Update package ID

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
     defaultConfig {
-        applicationId "ninhn.app.girlxinh"
+        applicationId "ninhn.app.worldgirl"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
